--- a/source/index.html
+++ b/source/index.html
@@ -40,11 +40,9 @@
       </section>
       <section class="features">
         <div class="features__inner container">
-          <div class="features-slogan">
-            <h2 class="visually-hidden">Наши приемущества</h2>
-            <p class="features-slogan__title">Устали от серости мегаполиса?</p>
-            <p class="features-slogan__subtitle">Нам есть, что вам предложить!</p>
-          </div>
+          <h2 class="visually-hidden">Наши приемущества</h2>
+          <p class="features__title">Устали от серости мегаполиса?</p>
+          <p class="features__subtitle">Нам есть, что вам предложить!</p>
           <ul class="features-list">
             <li class="features-list__item feature-item">
               <img class="feature-item__img" src="" alt="Приложение Pink">
