Исправил блок App

--- a/source/index.html
+++ b/source/index.html
@@ -34,7 +34,7 @@
               <li class="app-list__item"><img class="app-list__img" src="" alt="Логотип Android"></li>
               <li class="app-list__item"><img class="app-list__img" src="" alt="Логотип Microsoft"></li>
             </ul>
-            <p class="app-info__description">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+            <p class="app__description">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
           </div>
         </div>
       </section>
