Исправил ошибки в разметке

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -30,48 +30,50 @@
       <section class="gallery">
         <h2 class="visually-hidden">Галлерея</h2>
         <p class="gallery__description">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</p>
-        <div class="gallery__item blog-post">
-          <img class="blog-post__image" src="" alt="Фото">
-          <p class="blog-post__author">Анна<span class="blog-post__time">(5 минут назад)</span></p>
-          <p class="blog-post__message">Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
-          <p class="blog-post__likes">Нравится: 215</p>
-        </div>
-        <div>
-          <img class="blog-post__image" src="" alt="Фото">
-          <p class="blog-post__author">Анна<span class="blog-post__time">(5 часов назад)</span></p>
-          <p class="blog-post__message">Вчера он на луну летал, сегодня в руки к нам попал. Вчера он на луну летал, сегодня в руки к нам попал.</p>
-          <p class="blog-post__likes">Нравится: 356</p>
-        </div>
-        <div>
-          <img class="blog-post__image" src="" alt="Фото">
-          <p class="blog-post__author">Антон<span class="blog-post__time">(12 часов назад)</span></p>
-          <p class="blog-post__message">Соседи будут рады!</p>
-          <p class="blog-post__likes">Нравится: 666</p>
-        </div>
-        <div>
-          <img class="blog-post__image" src="" alt="Фото">
-          <p class="blog-post__author">Борис<span class="blog-post__time">(20 часов назад)</span></p>
-          <p class="blog-post__message">Здесь могла быть ваша цитата о высоком и вечном.</p>
-          <p class="blog-post__likes">Нравится: 215</p>
-        </div>
-        <div>
-          <img class="blog-post__image" src="" alt="Фото">
-          <p class="blog-post__author">Сергей<span class="blog-post__time">(25 часов назад)</span></p>
-          <p class="blog-post__message">Самая кубанская в мире!</p>
-          <p class="blog-post__likes">Нравится: 4</p>
-        </div>
-        <div>
-          <img class="blog-post__image" src="" alt="Фото">
-          <p class="blog-post__author">Максим<span class="blog-post__time">(40 часов назад)</span></p>
-          <p class="blog-post__message">Где снег-то?</p>
-          <p class="blog-post__likes">Нравится: 150</p>
-        </div>
-        <div>
-          <img class="blog-post__image" src="" alt="Фото">
-          <p class="blog-post__author">Надежда<span class="blog-post__time">(45 часов назад)</span></p>
-          <p class="blog-post__message">Всем GM и взаимные лайки!</p>
-          <p class="blog-post__likes">Нравится: 2560</p>
-        </div>
+        <ul class="gallery__list">
+          <li class="gallery__item blog-post">
+            <img class="blog-post__image" src="" alt="Фото">
+            <p class="blog-post__author">Анна<span class="blog-post__time">(5 минут назад)</span></p>
+            <p class="blog-post__message">Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
+            <p class="blog-post__likes">Нравится: 215</p>
+          </li>
+          <li class="gallery__item blog-post">
+            <img class="blog-post__image" src="" alt="Фото">
+            <p class="blog-post__author">Анна<span class="blog-post__time">(5 часов назад)</span></p>
+            <p class="blog-post__message">Вчера он на луну летал, сегодня в руки к нам попал. Вчера он на луну летал, сегодня в руки к нам попал.</p>
+            <p class="blog-post__likes">Нравится: 356</p>
+          </li>
+          <div class="gallery__item blog-post">
+            <img class="blog-post__image" src="" alt="Фото">
+            <p class="blog-post__author">Антон<span class="blog-post__time">(12 часов назад)</span></p>
+            <p class="blog-post__message">Соседи будут рады!</p>
+            <p class="blog-post__likes">Нравится: 666</p>
+          </li>
+          <li class="gallery__item blog-post">
+            <img class="blog-post__image" src="" alt="Фото">
+            <p class="blog-post__author">Борис<span class="blog-post__time">(20 часов назад)</span></p>
+            <p class="blog-post__message">Здесь могла быть ваша цитата о высоком и вечном.</p>
+            <p class="blog-post__likes">Нравится: 215</p>
+          </li>
+          <li class="gallery__item blog-post">
+            <img class="blog-post__image" src="" alt="Фото">
+            <p class="blog-post__author">Сергей<span class="blog-post__time">(25 часов назад)</span></p>
+            <p class="blog-post__message">Самая кубанская в мире!</p>
+            <p class="blog-post__likes">Нравится: 4</p>
+          </li>
+          <li class="gallery__item blog-post">
+            <img class="blog-post__image" src="" alt="Фото">
+            <p class="blog-post__author">Максим<span class="blog-post__time">(40 часов назад)</span></p>
+            <p class="blog-post__message">Где снег-то?</p>
+            <p class="blog-post__likes">Нравится: 150</p>
+          </li>
+          <li class="gallery__item blog-post">
+            <img class="blog-post__image" src="" alt="Фото">
+            <p class="blog-post__author">Надежда<span class="blog-post__time">(45 часов назад)</span></p>
+            <p class="blog-post__message">Всем GM и взаимные лайки!</p>
+            <p class="blog-post__likes">Нравится: 2560</p>
+          </li>
+        </ul>
       </section>
       <section class="editor">
         <h2 class="visually-hidden">Редактор фотографий</h2>
