Застилизовал form.html

--- a/source/index.html
+++ b/source/index.html
@@ -19,7 +19,7 @@
           <ul class="main-navigation__list">
             <li class="main-navigation__item"><a class="main-navigation__link" href="">Главная</a></li>
             <li class="main-navigation__item"><a class="main-navigation__link" href="">Фотографии</a></li>
-            <li class="main-navigation__item"><a class="main-navigation__link" href="">Конкурс</a></li>
+            <li class="main-navigation__item"><a class="main-navigation__link" href="form.html">Конкурс</a></li>
             <li class="main-navigation__item"><a class="main-navigation__link" href="">HTML Academy</a></li>
           </ul>
         </nav>
