--- a/source/form.html
+++ b/source/form.html
@@ -2,6 +2,8 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>HTML Academy: Пинк</title>
   </head>
   <body class="page__body">
@@ -9,16 +11,16 @@
     <header class="page-header">
       <div class="page-header__inner container">
         <h2 class="visually-hidden">Навигация по сайту</h2>
-        <a class="page-header__logo logo" aria-label="На главную">
-          <img class="logo__image" src="" alt="Логотип Pink">
+        <a class="page-header__logo" aria-label="На главную">
+          <img width="74" height="23" src="img/pink-logo.svg" alt="Логотип Pink">
         </a>
         <nav class="main-navigation">
           <button class="main-navigation__toggle" aria-label="Открыть меню" type="button"></button>
           <ul class="main-navigation__list">
-            <li class="main-navigation__item"><a href="main-navigation__link">Главная</a></li>
-            <li class="main-navigation__item"><a href="main-navigation__link">Фотографии</a></li>
-            <li class="main-navigation__item"><a href="main-navigation__link">Конкурс</a></li>
-            <li class="main-navigation__item"><a href="main-navigation__link">HTML Academy</a></li>
+            <li class="main-navigation__item"><a class="main-navigation__link" href="">Главная</a></li>
+            <li class="main-navigation__item"><a class="main-navigation__link" href="">Фотографии</a></li>
+            <li class="main-navigation__item"><a class="main-navigation__link" href="form.html">Конкурс</a></li>
+            <li class="main-navigation__item"><a class="main-navigation__link" href="">HTML Academy</a></li>
           </ul>
         </nav>
       </div>
@@ -33,11 +35,11 @@
         <fieldset class="text-field">
           <legend class="visually-hidden">ФИО</legend>
           <label class="text-field__label" for="surname">Фамилия:</label>
-          <input class="text-field__input" name="surname" id="surname" type="text">
+          <input class="text-field__input" placeholder="Укажите фамилию *" name="surname" id="surname" type="text">
           <label class="text-field__label" for="name">Имя:</label>
-          <input class="text-field__input" name="name" id="name" type="text">
+          <input class="text-field__input" placeholder="Введите ваше имя *" name="name" id="name" type="text">
           <label class="text-field__label" for="patronymic">Отчество:</label>
-          <input class="text-field__input" name="patronymic" id="patronymic" type="text">
+          <input class="text-field__input" placeholder="Ну и отчество тоже" name="patronymic" id="patronymic" type="text">
         </fieldset>
         <fieldset class="select-field">
           <legend class="visually-hidden">Достижения</legend>
@@ -70,9 +72,9 @@
         <fieldset class="text-field">
           <legend class="visually-hidden">Ваши контакты</legend>
           <label class="text-field__label" for="phone">Номер телефона</label>
-          <input class="text-field__input" id="phone" type="number">
+          <input class="text-field__input" placeholder="Номер, пожалуйста" id="phone" type="number">
           <label class="text-field__label" for="email">Адрес почты:</label>
-          <input class="text-field__input" id="email" type="email">
+          <input class="text-field__input" placeholder="Введите почту *" id="email" type="email">
         </fieldset>
         <fieldset class="select-field">
           <legend class="visually-hidden">Платформа</legend>
@@ -101,17 +103,17 @@
     </main>
     <footer class="page-footer">
       <div class="page-footer__inner">
-        <a class="page-footer__logo logo" href="">
-          <img class="logo__image" src="" alt="Логотип Pink">
+        <a class="page-footer__logo" href="">
+          <img src="img/pink-logo-large.svg" width="145" height="40" alt="Логотип Pink">
         </a>
-        <ul class="footer-list">
-          <li class="footer-list__item"><a class="footer-list__link" aria-label="Мы в Twitter" href=""></a></li>
-          <li class="footer-list__item"><a class="footer-list__link" aria-label="Мы в FaceBook" href=""></a></li>
-          <li class="footer-list__item"><a class="footer-list__link" aria-label="Мы на YouTube" href=""></a></li>
+        <ul class="page-footer__list">
+          <li class="page-footer__item"><a class="page-footer__link" aria-label="Мы в Twitter" href=""></a></li>
+          <li class="page-footer__item"><a class="page-footer__link" aria-label="Мы в FaceBook" href=""></a></li>
+          <li class="page-footer__item"><a class="page-footer__link" aria-label="Мы на YouTube" href=""></a></li>
         </ul>
-        <div class="authors">
-          <p class="authors__title">Разработано <span>HTML Academy</span></p>
-          <img class="authors__logo" src="" alt="Логотип HTML Academy">
+        <div class="page-footer__authors authors">
+          <p class="authors__title">Разработано <span class="visually-hidden">HTML Academy</span></p>
+          <img class="authors__logo" width="27" height="34" src="img/htmlacademy-logo.svg" alt="Логотип HTML Academy">
         </div>
       </div>
     </footer>
