--- a/source/form.html
+++ b/source/form.html
@@ -8,23 +8,25 @@
   </head>
   <body class="page__body">
     <h1 class="visually-hidden">Мобильное приложение "Pink"</h1>
-    <header class="page-header">
-      <div class="page-header__inner container">
-        <h2 class="visually-hidden">Навигация по сайту</h2>
-        <a class="page-header__logo" aria-label="На главную">
-          <img width="74" height="23" src="img/pink-logo.svg" alt="Логотип Pink">
-        </a>
-        <nav class="main-navigation">
-          <button class="main-navigation__toggle" aria-label="Открыть меню" type="button"></button>
-          <ul class="main-navigation__list">
-            <li class="main-navigation__item"><a class="main-navigation__link" href="">Главная</a></li>
-            <li class="main-navigation__item"><a class="main-navigation__link" href="">Фотографии</a></li>
-            <li class="main-navigation__item"><a class="main-navigation__link" href="form.html">Конкурс</a></li>
-            <li class="main-navigation__item"><a class="main-navigation__link" href="">HTML Academy</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+    <body class="page__body">
+      <h1 class="visually-hidden">Мобильное приложение "Pink"</h1>
+      <header class="page-header">
+        <div class="page-header__inner container">
+          <h2 class="visually-hidden">Навигация по сайту</h2>
+          <a class="page-header__logo" aria-label="На главную">
+            <img width="74" height="23" src="img/pink-logo.svg" alt="Логотип Pink">
+          </a>
+          <nav class="main-navigation">
+            <button class="main-navigation__toggle" aria-label="Открыть меню" type="button"></button>
+            <ul class="main-navigation__list">
+              <li class="main-navigation__item"><a class="main-navigation__link" href="index.html">Главная</a></li>
+              <li class="main-navigation__item"><a class="main-navigation__link" href="catalog.html">Фотографии</a></li>
+              <li class="main-navigation__item"><a class="main-navigation__link" href="">Конкурс</a></li>
+              <li class="main-navigation__item"><a class="main-navigation__link" href="">HTML Academy</a></li>
+            </ul>
+          </nav>
+        </div>
+      </header>
     <main class="main-content">
       <section class="content-title">
         <h2 class="content-title__title">Конкурс на самое безбашенное путишествие с Пинк</h2>
