--- a/source/index.html
+++ b/source/index.html
@@ -18,7 +18,7 @@
           <button class="main-navigation__toggle" aria-label="Открыть меню" type="button"></button>
           <ul class="main-navigation__list">
             <li class="main-navigation__item"><a class="main-navigation__link" href="">Главная</a></li>
-            <li class="main-navigation__item"><a class="main-navigation__link" href="">Фотографии</a></li>
+            <li class="main-navigation__item"><a class="main-navigation__link" href="catalog.html">Фотографии</a></li>
             <li class="main-navigation__item"><a class="main-navigation__link" href="form.html">Конкурс</a></li>
             <li class="main-navigation__item"><a class="main-navigation__link" href="">HTML Academy</a></li>
           </ul>
