--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,130 +1,163 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Пинк</title>
-  </head>
-  <body class="page__body">
-    <h1 class="visually-hidden">Мобильное приложение "Pink"</h1>
-    <header class="page-header">
-      <div class="page-header__inner container">
-        <h2 class="visually-hidden">Навигация по сайту</h2>
-        <a class="page-header__logo logo" aria-label="На главную">
-          <img class="logo__image" src="" alt="Логотип Pink">
-        </a>
-        <nav class="main-navigation">
-          <button class="main-navigation__toggle" aria-label="Открыть меню" type="button"></button>
-          <ul class="main-navigation__list">
-            <li class="main-navigation__item"><a href="main-navigation__link">Главная</a></li>
-            <li class="main-navigation__item"><a href="main-navigation__link">Фотографии</a></li>
-            <li class="main-navigation__item"><a href="main-navigation__link">Конкурс</a></li>
-            <li class="main-navigation__item"><a href="main-navigation__link">HTML Academy</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-    <main class="main-content">
-      <section class="content-title">
-        <h2 class="content-title__title">Фотографии пользователей</h2>
-      </section>
-      <section class="gallery">
-        <h2 class="visually-hidden">Галлерея</h2>
-        <p class="gallery__description">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</p>
-        <ul class="gallery__list">
-          <li class="gallery__item blog-post">
-            <img class="blog-post__image" src="" alt="Фото">
-            <p class="blog-post__author">Анна<span class="blog-post__time">(5 минут назад)</span></p>
-            <p class="blog-post__message">Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
-            <p class="blog-post__likes">Нравится: 215</p>
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
+  <title>HTML Academy: Пинк</title>
+</head>
+<body class="page__body">
+  <h1 class="visually-hidden">Мобильное приложение "Pink"</h1>
+  <header class="page-header">
+    <div class="page-header__inner container">
+      <h2 class="visually-hidden">Навигация по сайту</h2>
+      <a class="page-header__logo" aria-label="На главную">
+        <img width="74" height="23" src="img/pink-logo.svg" alt="Логотип Pink">
+      </a>
+      <nav class="main-navigation">
+        <button class="main-navigation__toggle" aria-label="Открыть меню" type="button"></button>
+        <ul class="main-navigation__list">
+          <li class="main-navigation__item"><a class="main-navigation__link" href="index.html">Главная</a></li>
+          <li class="main-navigation__item"><a class="main-navigation__link" href="">Фотографии</a></li>
+          <li class="main-navigation__item"><a class="main-navigation__link" href="form.html">Конкурс</a></li>
+          <li class="main-navigation__item"><a class="main-navigation__link" href="">HTML Academy</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main class="main-content">
+    <section class="content-title">
+      <h2 class="content-title__title">Фотографии пользователей</h2>
+    </section>
+    <section class="gallery">
+      <h2 class="visually-hidden">Галлерея</h2>
+      <p class="gallery__description">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает
+        ваших?</p>
+      <ul class="gallery__list">
+        <li class="gallery__item blog-post">
+          <img class="blog-post__image" src="" alt="Фото">
+          <p class="blog-post__author">Анна <span class="blog-post__time">(5 минут назад)</span></p>
+          <p class="blog-post__message">Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию
+            в перископе, задавайте свои вопросы!</p>
+          <p class="blog-post__likes">Нравится: 215</p>
+        </li>
+        <li class="gallery__item blog-post">
+          <img class="blog-post__image" src="" alt="Фото">
+          <p class="blog-post__author">Левон <span class="blog-post__time">(5 часов назад)</span></p>
+          <p class="blog-post__message">Вчера он на луну летал, сегодня в руки к нам попал. Вчера он на луну летал,
+            сегодня в руки к нам попал.</p>
+          <p class="blog-post__likes">Нравится: 356</p>
+        </li>
+        <li class="gallery__item blog-post">
+          <img class="blog-post__image" src="" alt="Фото">
+          <p class="blog-post__author">Антон <span class="blog-post__time">(12 часов назад)</span></p>
+          <p class="blog-post__message">Соседи будут рады!</p>
+          <p class="blog-post__likes">Нравится: 666</p>
+        </li>
+        <li class="gallery__item blog-post">
+          <img class="blog-post__image" src="" alt="Фото">
+          <p class="blog-post__author">Борис <span class="blog-post__time">(20 часов назад)</span></p>
+          <p class="blog-post__message">Здесь могла быть ваша цитата о высоком и вечном.</p>
+          <p class="blog-post__likes">Нравится: 215</p>
+        </li>
+        <li class="gallery__item blog-post">
+          <img class="blog-post__image" src="" alt="Фото">
+          <p class="blog-post__author">Сергей <span class="blog-post__time">(25 часов назад)</span></p>
+          <p class="blog-post__message">Самая кубанская в мире!</p>
+          <p class="blog-post__likes">Нравится: 4</p>
+        </li>
+        <li class="gallery__item blog-post">
+          <img class="blog-post__image" src="" alt="Фото">
+          <p class="blog-post__author">Максим <span class="blog-post__time">(40 часов назад)</span></p>
+          <p class="blog-post__message">Где снег-то?</p>
+          <p class="blog-post__likes">Нравится: 150</p>
+        </li>
+        <li class="gallery__item blog-post">
+          <img class="blog-post__image" src="" alt="Фото">
+          <p class="blog-post__author">Надежда <span class="blog-post__time">(45 часов назад)</span></p>
+          <p class="blog-post__message">Всем GM и взаимные лайки!</p>
+          <p class="blog-post__likes">Нравится: 2560</p>
+        </li>
+      </ul>
+    </section>
+    <section class="editor">
+      <h2 class="visually-hidden">Редактор фотографий</h2>
+      <p class="editor__description">Затмите их всех! Выкладывайте все, что накопилось в телефоне!</p>
+      <div class="editor__controls">
+        <img class="editor__image" src="" alt="Фотография">
+        <ul class="editor-buttons">
+          <li class="editor-buttons__item">
+            <button class="editor-buttons__button" aria-label="Обрезка">
+              <svg width="44" height="44" viewBox="0 0 44 44" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M32 28H36V12C36 10.9391 35.5786 9.92172 34.8284 9.17157C34.0783 8.42143 33.0609 8 32 8H16V12H32V28ZM12 32V0H8V8H0V12H8V32C8 33.0609 8.42143 34.0783 9.17157 34.8284C9.92172 35.5786 10.9391 36 12 36H32V44H36V36H44V32H12Z"
+                  fill="#283645" />
+              </svg>
+            </button>
           </li>
-          <li class="gallery__item blog-post">
-            <img class="blog-post__image" src="" alt="Фото">
-            <p class="blog-post__author">Анна<span class="blog-post__time">(5 часов назад)</span></p>
-            <p class="blog-post__message">Вчера он на луну летал, сегодня в руки к нам попал. Вчера он на луну летал, сегодня в руки к нам попал.</p>
-            <p class="blog-post__likes">Нравится: 356</p>
+          <li class="editor-buttons__item">
+            <button class="editor-buttons__button" aria-label="Насыщенность">
+              <svg width="48" height="43" viewBox="0 0 48 43" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M33.12 17.88L15.24 0L12.41 2.83L17.17 7.59L6.88 17.88C6.3182 18.4425 6.00264 19.205 6.00264 20C6.00264 20.795 6.3182 21.5575 6.88 22.12L17.88 33.12C18.4425 33.6818 19.205 33.9974 20 33.9974C20.795 33.9974 21.5575 33.6818 22.12 33.12L33.12 22.12C33.6818 21.5575 33.9974 20.795 33.9974 20C33.9974 19.205 33.6818 18.4425 33.12 17.88ZM10.41 20L20 10.42L29.59 20H10.41ZM38 23C38 23 34 27.33 34 30C34 31.0609 34.4214 32.0783 35.1716 32.8284C35.9217 33.5786 36.9391 34 38 34C39.0609 34 40.0783 33.5786 40.8284 32.8284C41.5786 32.0783 42 31.0609 42 30C42 27.33 38 23 38 23Z"
+                  fill="#283645" />
+                <path d="M48 40H0V43H48V40Z" fill="#283645" />
+              </svg>
+            </button>
           </li>
-          <div class="gallery__item blog-post">
-            <img class="blog-post__image" src="" alt="Фото">
-            <p class="blog-post__author">Антон<span class="blog-post__time">(12 часов назад)</span></p>
-            <p class="blog-post__message">Соседи будут рады!</p>
-            <p class="blog-post__likes">Нравится: 666</p>
-          </li>
-          <li class="gallery__item blog-post">
-            <img class="blog-post__image" src="" alt="Фото">
-            <p class="blog-post__author">Борис<span class="blog-post__time">(20 часов назад)</span></p>
-            <p class="blog-post__message">Здесь могла быть ваша цитата о высоком и вечном.</p>
-            <p class="blog-post__likes">Нравится: 215</p>
-          </li>
-          <li class="gallery__item blog-post">
-            <img class="blog-post__image" src="" alt="Фото">
-            <p class="blog-post__author">Сергей<span class="blog-post__time">(25 часов назад)</span></p>
-            <p class="blog-post__message">Самая кубанская в мире!</p>
-            <p class="blog-post__likes">Нравится: 4</p>
-          </li>
-          <li class="gallery__item blog-post">
-            <img class="blog-post__image" src="" alt="Фото">
-            <p class="blog-post__author">Максим<span class="blog-post__time">(40 часов назад)</span></p>
-            <p class="blog-post__message">Где снег-то?</p>
-            <p class="blog-post__likes">Нравится: 150</p>
-          </li>
-          <li class="gallery__item blog-post">
-            <img class="blog-post__image" src="" alt="Фото">
-            <p class="blog-post__author">Надежда<span class="blog-post__time">(45 часов назад)</span></p>
-            <p class="blog-post__message">Всем GM и взаимные лайки!</p>
-            <p class="blog-post__likes">Нравится: 2560</p>
+          <li class="editor-buttons__item">
+            <button class="editor-buttons__button" aria-label="Контрастность">
+              <svg width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M16 4C18.3734 4 20.6935 4.70379 22.6669 6.02236C24.6402 7.34094 26.1783 9.21509 27.0866 11.4078C27.9948 13.6005 28.2325 16.0133 27.7694 18.3411C27.3064 20.6689 26.1635 22.8071 24.4853 24.4853C22.8071 26.1635 20.6689 27.3064 18.3411 27.7694C16.0133 28.2324 13.6005 27.9948 11.4078 27.0866C9.21509 26.1783 7.34095 24.6402 6.02237 22.6668C4.70379 20.6935 4.00001 18.3734 4.00001 16C4.00001 12.8174 5.26429 9.76515 7.51473 7.51472C9.76516 5.26428 12.8174 4 16 4ZM16 0C12.8355 0 9.74207 0.938384 7.11088 2.69649C4.4797 4.45459 2.42894 6.95345 1.21793 9.87706C0.0069325 12.8007 -0.309921 16.0177 0.307443 19.1214C0.924806 22.2251 2.44866 25.0761 4.6863 27.3137C6.92394 29.5513 9.77487 31.0752 12.8786 31.6926C15.9823 32.3099 19.1993 31.9931 22.1229 30.7821C25.0466 29.5711 27.5454 27.5203 29.3035 24.8891C31.0616 22.2579 32 19.1645 32 16C32 11.7565 30.3143 7.68687 27.3137 4.68629C24.3131 1.68571 20.2435 0 16 0Z"
+                  fill="#283645" />
+                <path
+                  d="M16 24.29C18.1536 24.1422 20.1708 23.1824 21.644 21.6046C23.1172 20.0268 23.9366 17.9486 23.9366 15.79C23.9366 13.6314 23.1172 11.5532 21.644 9.97538C20.1708 8.39759 18.1536 7.43782 16 7.29"
+                  fill="#283645" />
+              </svg>
+            </button>
           </li>
         </ul>
-      </section>
-      <section class="editor">
-        <h2 class="visually-hidden">Редактор фотографий</h2>
-        <p class="editor__description">Затмите их всех! Выкладывайте все, что накопилось в телефоне!</p>
-        <div class="editor__controls">
-          <img class="editor__image" src="" alt="Фотография">
-          <ul class="editor-buttons">
-            <li class="editor-buttons__item"><button class="editor-buttons__button" aria-label="Обрезка"></button></li>
-            <li class="editor-buttons__item"><button class="editor-buttons__button" aria-label="Насыщенность"></button></li>
-            <li class="editor-buttons__item"><button class="editor-buttons__button" aria-label="Контрастность"></button></li>
-          </ul>
-          <ul class="editor-ranges">
-            <!-- ползунки -->
-            <li class="editor-ranges__item">
-              <div class="editor-ranges__range range">
-                <div class="range__progress"></div>
-              </div>
-            </li>
-            <li class="editor-ranges__item">
-              <div class="editor-ranges__range range">
-                <div class="range__progress"></div>
-              </div>
-            </li>
-            <li class="editor-ranges__item">
-              <div class="editor-ranges__range range">
-                <div class="range__progress"></div>
-              </div>
-            </li>
-          </ul>
-        </div>
+        <ul class="editor-ranges">
+          <!-- ползунки -->
+          <li class="editor-ranges__item">
+            <div class="editor-ranges__range range">
+              <div class="range__progress"></div>
+            </div>
+          </li>
+          <li class="editor-ranges__item">
+            <div class="editor-ranges__range range">
+              <div class="range__progress"></div>
+            </div>
+          </li>
+          <li class="editor-ranges__item">
+            <div class="editor-ranges__range range">
+              <div class="range__progress"></div>
+            </div>
+          </li>
+        </ul>
         <form class="editor__form" action="https://echo.htmlacademy.ru">
           <button class="editor__submit-button" type="submit">Запостить</button>
-          <button class="editor__reset-button" type="reset">Отмена</button>
+          <button class="editor__reset-button" disabled type="reset">Отмена</button>
         </form>
-      </section>
-    </main>
-    <footer class="page-footer">
-      <div class="page-footer__inner">
-        <a class="page-footer__logo logo" href="">
-          <img class="logo__image" src="" alt="Логотип Pink">
-        </a>
-        <ul class="footer-list">
-          <li class="footer-list__item"><a class="footer-list__link" aria-label="Мы в Twitter" href=""></a></li>
-          <li class="footer-list__item"><a class="footer-list__link" aria-label="Мы в FaceBook" href=""></a></li>
-          <li class="footer-list__item"><a class="footer-list__link" aria-label="Мы на YouTube" href=""></a></li>
-        </ul>
-        <div class="authors">
-          <p class="authors__title">Разработано <span>HTML Academy</span></p>
-          <img class="authors__logo" src="" alt="Логотип HTML Academy">
-        </div>
       </div>
-    </footer>
-  </body>
+    </section>
+  </main>
+  <footer class="page-footer">
+    <div class="page-footer__inner">
+      <a class="page-footer__logo" href="">
+        <img src="img/pink-logo-large.svg" width="145" height="40" alt="Логотип Pink">
+      </a>
+      <ul class="page-footer__list">
+        <li class="page-footer__item"><a class="page-footer__link" aria-label="Мы в Twitter" href=""></a></li>
+        <li class="page-footer__item"><a class="page-footer__link" aria-label="Мы в FaceBook" href=""></a></li>
+        <li class="page-footer__item"><a class="page-footer__link" aria-label="Мы на YouTube" href=""></a></li>
+      </ul>
+      <div class="page-footer__authors authors">
+        <p class="authors__title">Разработано <span class="visually-hidden">HTML Academy</span></p>
+        <img class="authors__logo" width="27" height="34" src="img/htmlacademy-logo.svg" alt="Логотип HTML Academy">
+      </div>
+    </div>
+  </footer>
+</body>
 </html>
